Fixed brun issue

--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -25,6 +25,6 @@ jobs:
       - name: dependencies
         run: npm install      
       - name: run build
-        run: npm Brun build
+        run: npm run build
       - name: DEploy
         run: echo "Deploying"
