--- a/.github/workflows/issue.yml
+++ b/.github/workflows/issue.yml
@@ -1,5 +1,5 @@
 name: basedonissue
-on: [issue, workflow_dispatch]
+on: [issues, workflow_dispatch]
 jobs:
   displayissue:
     runs-on: ubuntu-latest
